--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "config/constants.php"
         ]
     },
     "autoload-dev": {
